# CodeMender

./: pyproject.toml
src/: main.py
src/codemender.egg-info/: PKG-INFO  SOURCES.txt
test/: methods.py
