[project]
name = "codemender"
version = "1.0.0"
authors = [
  { name="ProgrammingLover71", email="abcbcalol69@gmail.com" },
]
description = "A small and user-friendly Python library for patching code"
readme = ""
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/ProgrammingLover71/CodeMender"
Issues = "https://github.com/ProgrammingLover71/CodeMender/issues"